# bciinterface_rosreceiver

./: .travis.yml  CMakeLists.txt  Makefile  README.md  mainpage.dox  manifest.xml  package.xml
src/: ROSReceiver.cpp  ROSReceiver.h  testROSReceiver.cpp
